fixed media for forms to make forms aligh left on smaller screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -423,6 +423,13 @@ input[type=email] {
   }
 }
 
+@media screen and (max-width: 576px) {
+  .checkout-survey {
+    margin: 5em;
+  }
+}
+
+
 @media print {
   header {
     display: none;
